Accessibility support for large text sizes and bold text

--- a/MoppApp/MoppApp/ContainerElements.xib
+++ b/MoppApp/MoppApp/ContainerElements.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+  <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,8 +19,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="104"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Container files" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Th8-Lk-whe">
-                    <rect key="frame" x="16" y="0.0" width="343" height="103"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Container files" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Th8-Lk-whe" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
+                    <rect key="frame" x="16" y="0.0" width="343" height="104"/>
                     <accessibility key="accessibilityConfiguration">
                         <accessibilityTraits key="traits" staticText="YES" header="YES"/>
                     </accessibility>
@@ -28,22 +28,8 @@
                     <color key="textColor" red="0.015686274509803921" green="0.11764705882352941" blue="0.25882352941176467" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xKk-QQ-QG2">
-                    <rect key="frame" x="0.0" y="103" width="375" height="1"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="1" id="y7B-S6-WlM"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RjT-uf-eo4">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
-                    <color key="backgroundColor" red="0.35686274509999999" green="0.35686274509999999" blue="0.35686274509999999" alpha="0.30404537671232879" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="1" id="SVd-xT-z1l"/>
-                    </constraints>
-                </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BTM-MC-Uo5">
-                    <rect key="frame" x="317" y="22.5" width="58" height="58"/>
+                    <rect key="frame" x="317" y="23" width="58" height="58"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="58" id="4K6-QW-U3T"/>
                         <constraint firstAttribute="width" secondItem="BTM-MC-Uo5" secondAttribute="height" multiplier="1:1" id="Ew6-ud-xja"/>
@@ -58,18 +44,12 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="RjT-uf-eo4" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="6no-PB-RtY"/>
-                <constraint firstItem="RjT-uf-eo4" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="7k9-Rd-zYD"/>
-                <constraint firstItem="RjT-uf-eo4" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="BvS-KL-LD2"/>
-                <constraint firstItem="xKk-QQ-QG2" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="GBM-fN-riy"/>
-                <constraint firstItem="xKk-QQ-QG2" firstAttribute="top" secondItem="Th8-Lk-whe" secondAttribute="bottom" id="Jf2-SY-huE"/>
-                <constraint firstItem="xKk-QQ-QG2" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="V9n-Wv-K5T"/>
-                <constraint firstItem="Th8-Lk-whe" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="X92-RB-WvW"/>
-                <constraint firstItem="Th8-Lk-whe" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="Zzv-iD-ddb"/>
+                <constraint firstItem="Th8-Lk-whe" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="4oF-Fn-MTV"/>
+                <constraint firstItem="Th8-Lk-whe" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="GU1-0C-Mil"/>
+                <constraint firstItem="Th8-Lk-whe" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailingMargin" id="I2X-kQ-2bZ"/>
+                <constraint firstItem="Th8-Lk-whe" firstAttribute="centerY" secondItem="BTM-MC-Uo5" secondAttribute="centerY" id="bM5-eS-7QS"/>
                 <constraint firstItem="BTM-MC-Uo5" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="g1D-40-unL"/>
-                <constraint firstItem="BTM-MC-Uo5" firstAttribute="centerY" secondItem="Th8-Lk-whe" secondAttribute="centerY" id="ocx-XC-tc0"/>
-                <constraint firstAttribute="bottom" secondItem="xKk-QQ-QG2" secondAttribute="bottom" id="qy1-VA-ZMN"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Th8-Lk-whe" secondAttribute="trailing" constant="16" id="xlL-qu-zya"/>
+                <constraint firstItem="Th8-Lk-whe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="vT1-2g-RCs"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
