--- a/MoppApp/MoppApp/Accessibility.storyboard
+++ b/MoppApp/MoppApp/Accessibility.storyboard
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -20,17 +18,17 @@
             <objects>
                 <viewController storyboardIdentifier="AccessibilityViewController" id="Y6W-OH-hqX" customClass="AccessibilityViewController" customModule="MoppApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n97-rK-R9x">
-                                <rect key="frame" x="0.0" y="117" width="414" height="780"/>
+                                <rect key="frame" x="0.0" y="84" width="600" height="551"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wyB-vq-rWY" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="745"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="531"/>
                                         <subviews>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jMg-Qh-WOG">
-                                                <rect key="frame" x="8" y="10" width="398" height="693"/>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jMg-Qh-WOG">
+                                                <rect key="frame" x="8" y="10" width="584" height="479"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <string key="text">RIA DigiDoc is designed to comply with the WCAG 2.1 AA accessibility guidelines. This means that the RIA DigiDoc application has been developed using the principles that the application should be usable by the blind and people with visual, mobility, and strength impairments.
 Accessibility can be improved by using built-in assistive tools on your smart device. You can find an overview of the main assistive tools below.
@@ -72,15 +70,15 @@ Magnification (Android, built in) https://support.google.com/accessibility/andro
                                     <constraint firstItem="wyB-vq-rWY" firstAttribute="width" secondItem="n97-rK-R9x" secondAttribute="width" id="3Tw-NK-574"/>
                                     <constraint firstItem="wyB-vq-rWY" firstAttribute="top" secondItem="n97-rK-R9x" secondAttribute="top" id="Jm6-Km-9HJ"/>
                                     <constraint firstItem="wyB-vq-rWY" firstAttribute="leading" secondItem="n97-rK-R9x" secondAttribute="leading" id="dKF-P0-LgV"/>
-                                    <constraint firstAttribute="bottom" secondItem="wyB-vq-rWY" secondAttribute="bottom" constant="35" id="mQG-Eg-FHo"/>
-                                    <constraint firstItem="wyB-vq-rWY" firstAttribute="height" secondItem="n97-rK-R9x" secondAttribute="height" priority="250" constant="-35" id="v1b-Ng-9UN"/>
+                                    <constraint firstAttribute="bottom" secondItem="wyB-vq-rWY" secondAttribute="bottom" constant="20" id="mQG-Eg-FHo"/>
+                                    <constraint firstItem="wyB-vq-rWY" firstAttribute="height" secondItem="n97-rK-R9x" secondAttribute="height" priority="250" constant="-20" id="v1b-Ng-9UN"/>
                                     <constraint firstAttribute="trailing" secondItem="wyB-vq-rWY" secondAttribute="trailing" id="xwh-sm-T1r"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="vX7-gT-dQI"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="UPd-Wk-ykd"/>
                             </scrollView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accessibility" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bBp-20-pae">
-                                <rect key="frame" x="78" y="68" width="260" height="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Accessibility" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.10000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="bBp-20-pae" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
+                                <rect key="frame" x="78" y="0.0" width="446" height="76"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" staticText="YES" header="YES"/>
                                 </accessibility>
@@ -89,7 +87,7 @@ Magnification (Android, built in) https://support.google.com/accessibility/andro
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ivr-aG-jmF">
-                                <rect key="frame" x="346" y="61" width="48" height="48"/>
+                                <rect key="frame" x="532" y="13" width="48" height="48"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="48" id="G8b-31-NYm"/>
                                     <constraint firstAttribute="height" constant="48" id="e8X-vO-XOv"/>
@@ -104,12 +102,12 @@ Magnification (Android, built in) https://support.google.com/accessibility/andro
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="bBp-20-pae" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="1yY-zb-dKK"/>
+                            <constraint firstItem="bBp-20-pae" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="1yY-zb-dKK"/>
                             <constraint firstItem="n97-rK-R9x" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="2zk-Ud-fAc"/>
                             <constraint firstItem="ivr-aG-jmF" firstAttribute="leading" secondItem="bBp-20-pae" secondAttribute="trailing" constant="8" id="AXv-gc-b4s"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="ivr-aG-jmF" secondAttribute="trailing" constant="20" id="FT1-iW-Nzb"/>
-                            <constraint firstItem="n97-rK-R9x" firstAttribute="top" secondItem="ivr-aG-jmF" secondAttribute="bottom" constant="8" id="HHk-us-eAU"/>
-                            <constraint firstItem="n97-rK-R9x" firstAttribute="top" secondItem="bBp-20-pae" secondAttribute="bottom" constant="15" id="TxK-GL-zdB"/>
+                            <constraint firstItem="n97-rK-R9x" firstAttribute="top" secondItem="ivr-aG-jmF" secondAttribute="bottom" constant="23" id="HHk-us-eAU"/>
+                            <constraint firstItem="n97-rK-R9x" firstAttribute="top" secondItem="bBp-20-pae" secondAttribute="bottom" constant="8" id="TxK-GL-zdB"/>
                             <constraint firstItem="ivr-aG-jmF" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="13" id="aat-YV-Pfg"/>
                             <constraint firstItem="bBp-20-pae" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="78" id="dRw-Ah-fkH"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="n97-rK-R9x" secondAttribute="trailing" id="hIc-s9-JiM"/>
