--- a/MoppApp/MoppApp/RecentContainersElements.xib
+++ b/MoppApp/MoppApp/RecentContainersElements.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -28,17 +28,17 @@
                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                     <textInputTraits key="textInputTraits" returnKeyType="done"/>
                 </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recent containers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yr2-Tq-KJ0">
-                    <rect key="frame" x="102.5" y="11.5" width="170.5" height="25"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recent containers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yr2-Tq-KJ0" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
+                    <rect key="frame" x="8" y="0.0" width="311" height="48"/>
                     <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="21"/>
                     <color key="textColor" red="0.015686274510000001" green="0.1176470588" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Fx-J3-DpC">
-                    <rect key="frame" x="273" y="0.0" width="48" height="48"/>
+                    <rect key="frame" x="327" y="8" width="32" height="32"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="9Fx-J3-DpC" secondAttribute="height" multiplier="1:1" id="2Ca-N8-aup"/>
-                        <constraint firstAttribute="width" constant="48" id="flP-zC-d12"/>
+                        <constraint firstAttribute="width" constant="32" id="flP-zC-d12"/>
                     </constraints>
                     <state key="normal" image="searchContainers"/>
                     <connections>
@@ -49,13 +49,18 @@
             <viewLayoutGuide key="safeArea" id="zkY-Ou-pn7"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="yr2-Tq-KJ0" firstAttribute="centerX" secondItem="zkY-Ou-pn7" secondAttribute="centerX" id="6bp-G2-OoW"/>
+                <constraint firstItem="yr2-Tq-KJ0" firstAttribute="top" secondItem="zkY-Ou-pn7" secondAttribute="top" id="5OY-Zo-39y"/>
+                <constraint firstItem="yr2-Tq-KJ0" firstAttribute="centerX" secondItem="zkY-Ou-pn7" secondAttribute="centerX" constant="-24" id="6bp-G2-OoW"/>
                 <constraint firstItem="zkY-Ou-pn7" firstAttribute="trailing" secondItem="YC1-OL-BjW" secondAttribute="trailing" id="9Hb-WD-2AF"/>
-                <constraint firstItem="9Fx-J3-DpC" firstAttribute="leading" secondItem="yr2-Tq-KJ0" secondAttribute="trailing" id="C4N-P9-6rS"/>
+                <constraint firstItem="yr2-Tq-KJ0" firstAttribute="top" secondItem="zkY-Ou-pn7" secondAttribute="top" id="D5d-Yq-1IK"/>
                 <constraint firstItem="YC1-OL-BjW" firstAttribute="leading" secondItem="zkY-Ou-pn7" secondAttribute="leading" id="Gor-K3-uzx"/>
+                <constraint firstItem="yr2-Tq-KJ0" firstAttribute="leading" secondItem="zkY-Ou-pn7" secondAttribute="leading" constant="8" id="Hsm-Fj-Dt7"/>
+                <constraint firstItem="zkY-Ou-pn7" firstAttribute="bottom" secondItem="yr2-Tq-KJ0" secondAttribute="bottom" id="N2J-8E-miH"/>
+                <constraint firstItem="9Fx-J3-DpC" firstAttribute="leading" secondItem="yr2-Tq-KJ0" secondAttribute="trailing" constant="8" id="T2D-6F-EzT"/>
                 <constraint firstItem="yr2-Tq-KJ0" firstAttribute="centerY" secondItem="zkY-Ou-pn7" secondAttribute="centerY" id="aqY-rT-95h"/>
                 <constraint firstItem="YC1-OL-BjW" firstAttribute="top" secondItem="zkY-Ou-pn7" secondAttribute="top" id="d6l-ez-9HY"/>
                 <constraint firstItem="9Fx-J3-DpC" firstAttribute="centerY" secondItem="zkY-Ou-pn7" secondAttribute="centerY" id="lPF-L4-EAk"/>
+                <constraint firstItem="zkY-Ou-pn7" firstAttribute="bottom" secondItem="yr2-Tq-KJ0" secondAttribute="bottom" id="ozi-Mw-fMY"/>
                 <constraint firstItem="zkY-Ou-pn7" firstAttribute="bottom" secondItem="YC1-OL-BjW" secondAttribute="bottom" id="xBU-Ws-iAR"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -64,7 +69,7 @@
                 <outlet property="searchTextField" destination="YC1-OL-BjW" id="JaC-Lq-RgF"/>
                 <outlet property="titleLabel" destination="yr2-Tq-KJ0" id="3lB-x7-Ak0"/>
             </connections>
-            <point key="canvasLocation" x="-137.5" y="-154"/>
+            <point key="canvasLocation" x="-138.40000000000001" y="-154.72263868065968"/>
         </view>
     </objects>
     <resources>
