Smart-ID API v2

--- a/MoppApp/MoppApp/Settings.storyboard
+++ b/MoppApp/MoppApp/Settings.storyboard
@@ -515,6 +515,9 @@
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="a1h-Wv-jK4" secondAttribute="trailing" constant="16" id="0Os-C2-gVI"/>
                                             <constraint firstAttribute="trailing" secondItem="mys-OT-GnR" secondAttribute="trailing" constant="16" id="0gj-pC-ylw"/>
+                                            <constraint firstItem="OTz-zP-CO1" firstAttribute="top" secondItem="17b-Vw-0Le" secondAttribute="bottom" constant="7.5" id="20e-IR-wKB"/>
+                                            <constraint firstItem="xlP-Wo-TDh" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="2KT-rd-CaQ"/>
+                                            <constraint firstItem="9M0-ZI-Vph" firstAttribute="top" secondItem="OTz-zP-CO1" secondAttribute="bottom" constant="7.5" id="2N0-GA-Eip"/>
                                             <constraint firstItem="0hB-g9-5sw" firstAttribute="top" secondItem="f4s-I6-A2B" secondAttribute="bottom" constant="8" id="2RL-H9-4n8"/>
                                             <constraint firstItem="2nF-ky-2K3" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="2S0-zA-POc"/>
                                             <constraint firstItem="uS5-R8-DDB" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="4ZK-L0-0fm"/>
@@ -524,6 +527,7 @@
                                             <constraint firstItem="0hB-g9-5sw" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="7Uo-lw-emM"/>
                                             <constraint firstAttribute="trailing" secondItem="0IR-hS-aJO" secondAttribute="trailing" constant="16" id="8hB-sT-BT7"/>
                                             <constraint firstAttribute="trailing" secondItem="B71-Bc-rYA" secondAttribute="trailing" constant="16" id="97p-mT-QpP"/>
+                                            <constraint firstItem="OTz-zP-CO1" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="Aam-gV-WS6"/>
                                             <constraint firstAttribute="trailing" secondItem="l32-s5-RMt" secondAttribute="trailing" constant="16" id="Aup-8M-Tz3"/>
                                             <constraint firstAttribute="trailing" secondItem="wJ6-Ui-Rim" secondAttribute="trailing" constant="16" id="CZY-Fc-m7d"/>
                                             <constraint firstItem="wJ6-Ui-Rim" firstAttribute="top" secondItem="Ljx-rt-qve" secondAttribute="bottom" constant="19" id="DWm-HV-u99"/>
@@ -535,7 +539,6 @@
                                             <constraint firstAttribute="trailing" secondItem="Ljx-rt-qve" secondAttribute="trailing" constant="16" id="Grh-Wd-rfe"/>
                                             <constraint firstItem="yx1-Am-F1U" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="H3I-sr-KVV"/>
                                             <constraint firstItem="0IR-hS-aJO" firstAttribute="top" secondItem="a1h-Wv-jK4" secondAttribute="bottom" constant="8" id="Io7-gv-cE3"/>
-                                            <constraint firstItem="9M0-ZI-Vph" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="JFy-xs-V2P"/>
                                             <constraint firstItem="TtS-74-evo" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="JI2-M7-j4b"/>
                                             <constraint firstAttribute="trailing" secondItem="Nul-b2-VU3" secondAttribute="trailing" constant="16" id="MYp-Dz-7lV"/>
                                             <constraint firstItem="a1h-Wv-jK4" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="MkY-jP-TRJ"/>
@@ -553,16 +556,15 @@
                                             <constraint firstItem="TtS-74-evo" firstAttribute="top" secondItem="9M0-ZI-Vph" secondAttribute="bottom" constant="24" id="UY6-e5-fUh"/>
                                             <constraint firstItem="ICY-hq-vOj" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="WBx-0n-FTj"/>
                                             <constraint firstAttribute="trailing" secondItem="dyA-bc-5kH" secondAttribute="trailing" constant="16" id="WYE-oy-FwH"/>
-                                            <constraint firstAttribute="trailing" secondItem="9M0-ZI-Vph" secondAttribute="trailing" constant="16" id="Wa1-q6-DUM"/>
                                             <constraint firstItem="nTe-hi-UFW" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="X4e-xJ-ilO"/>
-                                            <constraint firstAttribute="trailing" secondItem="OTz-zP-CO1" secondAttribute="trailing" constant="16" id="XAM-fW-4xz"/>
                                             <constraint firstItem="yx1-Am-F1U" firstAttribute="top" secondItem="mys-OT-GnR" secondAttribute="bottom" constant="8" id="XES-0N-kvT"/>
                                             <constraint firstItem="v3j-1F-BkV" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="Xtb-O9-uk2"/>
                                             <constraint firstItem="l32-s5-RMt" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="YSJ-Yr-sEj"/>
-                                            <constraint firstItem="9M0-ZI-Vph" firstAttribute="top" secondItem="OTz-zP-CO1" secondAttribute="bottom" constant="8" id="YyZ-qM-4hM"/>
                                             <constraint firstItem="mys-OT-GnR" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="Z30-7c-JHA"/>
                                             <constraint firstAttribute="trailing" secondItem="nTe-hi-UFW" secondAttribute="trailing" constant="16" id="aXO-pG-Gp6"/>
+                                            <constraint firstAttribute="trailing" secondItem="17b-Vw-0Le" secondAttribute="trailing" constant="16" id="bdy-wf-bNc"/>
                                             <constraint firstAttribute="trailing" secondItem="yx1-Am-F1U" secondAttribute="trailing" constant="16" id="blL-XA-lwQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="xlP-Wo-TDh" secondAttribute="trailing" constant="16" id="cRW-Cx-ZYA"/>
                                             <constraint firstItem="ruH-oH-HXZ" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="cnc-BZ-MpT"/>
                                             <constraint firstItem="wJ6-Ui-Rim" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="crW-eS-DMa"/>
                                             <constraint firstAttribute="trailing" secondItem="pEs-3R-bW3" secondAttribute="trailing" constant="16" id="eRS-Ec-rlO"/>
@@ -581,6 +583,7 @@
                                             <constraint firstItem="0IR-hS-aJO" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="jjQ-dh-LXH"/>
                                             <constraint firstItem="8If-1L-pXu" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="kOK-90-cC6"/>
                                             <constraint firstItem="lJS-SP-IrB" firstAttribute="top" secondItem="GoO-ax-djg" secondAttribute="bottom" constant="8" id="lMH-rn-onY"/>
+                                            <constraint firstItem="17b-Vw-0Le" firstAttribute="top" secondItem="xlP-Wo-TDh" secondAttribute="bottom" constant="7.5" id="lUH-0i-J67"/>
                                             <constraint firstItem="nTe-hi-UFW" firstAttribute="top" secondItem="0hB-g9-5sw" secondAttribute="bottom" constant="8" id="lqu-Fo-VIS"/>
                                             <constraint firstItem="l32-s5-RMt" firstAttribute="top" secondItem="TtS-74-evo" secondAttribute="bottom" constant="8" id="lze-hW-szp"/>
                                             <constraint firstItem="axW-Sz-ktm" firstAttribute="leading" secondItem="P3E-QG-6de" secondAttribute="leading" constant="16" id="n62-3J-liH"/>
@@ -671,6 +674,8 @@
                         <outlet property="sivaURL" destination="mys-OT-GnR" id="urG-d8-7zH"/>
                         <outlet property="smartIdSKURL" destination="ruH-oH-HXZ" id="mkI-1f-AwI"/>
                         <outlet property="smartIdURL" destination="axW-Sz-ktm" id="Uc2-Sx-eU7"/>
+                        <outlet property="smartIdV2SKUrl" destination="17b-Vw-0Le" id="Dmi-H1-7ZS"/>
+                        <outlet property="smartIdV2URL" destination="xlP-Wo-TDh" id="ojz-Ko-MXI"/>
                         <outlet property="titleLabel" destination="Vsg-kH-FdR" id="Obs-HE-N76"/>
                         <outlet property="tsaURL" destination="yx1-Am-F1U" id="04n-KN-UK9"/>
                         <outlet property="tslURL" destination="pEs-3R-bW3" id="Btd-sB-SKU"/>
